logs/py3o.renderclient.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Automat-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/Twisted-17.9.0.egg-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/automat'...
Listing './lib/python3.5/site-packages/automat/_test'...
Listing './lib/python3.5/site-packages/constantly'...
Listing './lib/python3.5/site-packages/constantly-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/exampleproj'...
Listing './lib/python3.5/site-packages/hyperlink'...
Listing './lib/python3.5/site-packages/hyperlink/test'...
Listing './lib/python3.5/site-packages/hyperlink-17.3.1.dist-info'...
Listing './lib/python3.5/site-packages/incremental'...
Listing './lib/python3.5/site-packages/incremental/tests'...
Listing './lib/python3.5/site-packages/incremental-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py3o'...
Listing './lib/python3.5/site-packages/py3o/renderclient'...
Compiling './lib/python3.5/site-packages/py3o/renderclient/client.py'...
***   File "./lib/python3.5/site-packages/py3o/renderclient/client.py", line 42
    raise ValueError, "Render failed, no reason given."
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/py3o.renderclient-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pyf'...
Listing './lib/python3.5/site-packages/pyf/splitter'...
Listing './lib/python3.5/site-packages/pyf/station'...
Compiling './lib/python3.5/site-packages/pyf/station/client.py'...
***   File "./lib/python3.5/site-packages/pyf/station/client.py", line 163
    print message_packet
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyf/station/main.py'...
***   File "./lib/python3.5/site-packages/pyf/station/main.py", line 162
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyf/station/utils.py'...
***   File "./lib/python3.5/site-packages/pyf/station/utils.py", line 60
    raise ValueError, "Action %s unknown" % item.action
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf/transport'...
Compiling './lib/python3.5/site-packages/pyf/transport/packets.py'...
***   File "./lib/python3.5/site-packages/pyf/transport/packets.py", line 188
    raise AttributeError, "'packet' object has no attribute '%s'" % attribute
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyf.splitter-3.1.egg-info'...
Listing './lib/python3.5/site-packages/pyf.station-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pyf.transport-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pyjon'...
Listing './lib/python3.5/site-packages/pyjon/events'...
Listing './lib/python3.5/site-packages/pyjon/utils'...
Listing './lib/python3.5/site-packages/pyjon.events-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pyjon.utils-0.7.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/twisted'...
Listing './lib/python3.5/site-packages/twisted/_threads'...
Listing './lib/python3.5/site-packages/twisted/_threads/test'...
Listing './lib/python3.5/site-packages/twisted/application'...
Listing './lib/python3.5/site-packages/twisted/application/runner'...
Listing './lib/python3.5/site-packages/twisted/application/runner/test'...
Listing './lib/python3.5/site-packages/twisted/application/test'...
Listing './lib/python3.5/site-packages/twisted/application/twist'...
Listing './lib/python3.5/site-packages/twisted/application/twist/test'...
Listing './lib/python3.5/site-packages/twisted/conch'...
Listing './lib/python3.5/site-packages/twisted/conch/client'...
Listing './lib/python3.5/site-packages/twisted/conch/insults'...
Listing './lib/python3.5/site-packages/twisted/conch/openssh_compat'...
Listing './lib/python3.5/site-packages/twisted/conch/scripts'...
Listing './lib/python3.5/site-packages/twisted/conch/ssh'...
Listing './lib/python3.5/site-packages/twisted/conch/test'...
Listing './lib/python3.5/site-packages/twisted/conch/ui'...
Listing './lib/python3.5/site-packages/twisted/cred'...
Listing './lib/python3.5/site-packages/twisted/cred/test'...
Listing './lib/python3.5/site-packages/twisted/enterprise'...
Listing './lib/python3.5/site-packages/twisted/internet'...
Listing './lib/python3.5/site-packages/twisted/internet/iocpreactor'...
Listing './lib/python3.5/site-packages/twisted/internet/iocpreactor/iocpsupport'...
Listing './lib/python3.5/site-packages/twisted/internet/test'...
Listing './lib/python3.5/site-packages/twisted/internet/test/fake_CAs'...
Listing './lib/python3.5/site-packages/twisted/logger'...
Listing './lib/python3.5/site-packages/twisted/logger/test'...
Listing './lib/python3.5/site-packages/twisted/mail'...
Listing './lib/python3.5/site-packages/twisted/mail/test'...
Listing './lib/python3.5/site-packages/twisted/names'...
Listing './lib/python3.5/site-packages/twisted/names/test'...
Listing './lib/python3.5/site-packages/twisted/pair'...
Listing './lib/python3.5/site-packages/twisted/pair/test'...
Listing './lib/python3.5/site-packages/twisted/persisted'...
Listing './lib/python3.5/site-packages/twisted/persisted/test'...
Listing './lib/python3.5/site-packages/twisted/plugins'...
Listing './lib/python3.5/site-packages/twisted/positioning'...
Listing './lib/python3.5/site-packages/twisted/positioning/test'...
Listing './lib/python3.5/site-packages/twisted/protocols'...
Listing './lib/python3.5/site-packages/twisted/protocols/haproxy'...
Listing './lib/python3.5/site-packages/twisted/protocols/haproxy/test'...
Listing './lib/python3.5/site-packages/twisted/protocols/test'...
Listing './lib/python3.5/site-packages/twisted/python'...
Listing './lib/python3.5/site-packages/twisted/python/_pydoctortemplates'...
Listing './lib/python3.5/site-packages/twisted/python/test'...
Listing './lib/python3.5/site-packages/twisted/runner'...
Listing './lib/python3.5/site-packages/twisted/runner/test'...
Listing './lib/python3.5/site-packages/twisted/scripts'...
Listing './lib/python3.5/site-packages/twisted/scripts/test'...
Listing './lib/python3.5/site-packages/twisted/spread'...
Listing './lib/python3.5/site-packages/twisted/spread/test'...
Listing './lib/python3.5/site-packages/twisted/tap'...
Listing './lib/python3.5/site-packages/twisted/test'...
Listing './lib/python3.5/site-packages/twisted/trial'...
Listing './lib/python3.5/site-packages/twisted/trial/_dist'...
Listing './lib/python3.5/site-packages/twisted/trial/_dist/test'...
Listing './lib/python3.5/site-packages/twisted/trial/test'...
Listing './lib/python3.5/site-packages/twisted/web'...
Listing './lib/python3.5/site-packages/twisted/web/_auth'...
Listing './lib/python3.5/site-packages/twisted/web/test'...
Listing './lib/python3.5/site-packages/twisted/words'...
Listing './lib/python3.5/site-packages/twisted/words/im'...
Listing './lib/python3.5/site-packages/twisted/words/protocols'...
Listing './lib/python3.5/site-packages/twisted/words/protocols/jabber'...
Listing './lib/python3.5/site-packages/twisted/words/test'...
Listing './lib/python3.5/site-packages/twisted/words/xish'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
